# STProto

./: Cargo.toml  README.md
doc/: STProto Specification.typ  STProto.typ
include/: STProto.h
src/: connection.rs  crypto.rs  datapack.rs  encoding.rs  exports.rs  handshaking.rs  lib.rs  method.rs  totp.rs  version.rs
tests/: Cargo.toml
